# simplesprite

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
Documentation/: base.html  classes.html  contain.html  doc_template.html  files.html  fonts.html  gui.html  index.html  messaging.html  sound.html  sprites.html  ss.css  ss_broadcaster.html  ss_button.html  ss_checkbox.html  ss_collider.html  ss_customgadget.html  ss_datacontext.html  ss_datatoken.html  ss_dial.html  ss_dragger.html  ss_editstring.html  ss_file.html  ss_flatfile.html  ss_folder.html  ss_folderiterator.html  ss_frame.html  ss_gadget.html  ss_game.html  ss_gui.html  ss_itemgroup.html  ss_iterator.html  ss_layer.html  ss_linkedlist.html  ss_listener.html  ss_listnode.html  ss_menu.html  ss_menubar.html  ss_menuitem.html  ss_message.html  (+19 more)
SimpleSprite Application/: prefix.h  version.plist
SimpleSprite Application/SimpleSpriteApp.xcodeproj/: project.pbxproj
SimpleSprite Application/source/: My_Game.cpp  My_Game.h  SDLMain.m  main.cpp  main.mm
SimpleSprite.xcodeproj/: project.pbxproj
source/: SS_AI.cpp  SS_Collisions.cpp  SS_Deformers.cpp  SS_Files.cpp  SS_Frame.cpp  SS_GUI.cpp  SS_Game.cpp  SS_ItemGroup.cpp  SS_ItemList.cpp  SS_Layer.cpp  SS_LayerItem.cpp  SS_Math.cpp  SS_Messages.cpp  SS_Particles.cpp  SS_SFont.cpp  SS_Sound.cpp  SS_Sprite.cpp  SS_Tiles.cpp  SS_Utilities.cpp  SS_Vectors.cpp  SS_World.cpp
source/headers/: SS_AI.h  SS_Collisions.h  SS_Config.h  SS_Deformers.h  SS_Files.h  SS_Frame.h  SS_GUI.h  SS_Game.h  SS_ItemGroup.h  SS_ItemList.h  SS_Layer.h  SS_LayerItem.h  SS_Math.h  SS_Messages.h  SS_Particles.h  SS_RefCounter.h  SS_SFont.h  SS_Sound.h  SS_Sprite.h  SS_Templates.h  SS_Tiles.h  SS_Types.h  SS_Utilities.h  SS_Vectors.h  SS_World.h  SS_macos_types.h  SS_sdl2.h  SS_sdl3.h  SimpleSprite.h
source/headers/SimpleSprite/: SimpleSprite.h
source/headers/sdl3_compat/: SDL.h  SDL_image.h  SDL_mixer.h  SDL_opengl.h  SDL_thread.h
xcode/: SimpleSprite_Prefix.pch
xcode/SimpleSprite.xcodeproj/: project.pbxproj
xcode/SimpleSprite.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/en.lproj/: InfoPlist.strings
